[package]
name = "webchain-rs"
version = "0.22.1"
authors = ["Webchain Network"]
description = "Webchain Network secure account management core libary"
homepage = "https://webchain.network"
repository = "https://github.com/webchain-network/webchain-rs"
keywords = ["webchain-network", "blockchain", "ffi", "crypto-wallet", "cold-storage"]
categories = ["embedded", "external-ffi-bindings"]
readme = "README.md"
license = "Apache-2.0"

[lib]
name = "webchain_rs"
path = "src/lib.rs"
#crate-type = ["rlib", "cdylib"]

[target.'cfg(unix)'.dependencies]
rust-scrypt = "0.1"

[dependencies]
time = "0.1"
futures = "0.1"
jsonrpc-core = "8.0"
jsonrpc-http-server = "8.0"
lazy_static = "0.2"
log = "0.3"
regex = "0.2"
rustc-serialize = "0.3"
hex = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
glob = "0.2"
uuid = { version = "0.5", features = ["rustc-serialize", "v4"] }
rust-crypto = "0.2"
secp256k1 = "0.6"
rand = "0.3"
byteorder="1.0"
ethabi = "2.0.0"
num = "0.1.40"
bitcoin = "0.10.1"
# optional dependencies
emerald-rocksdb =  { version = "0.10.3", optional = true }
hyper = { version = "0.11", optional = true }
reqwest = { version = "0.6", optional = true }
clippy = {version = "0.0", optional = true}
chrono = "0.4"
hidapi = "0.4"
emerald-rs = "0.25.4"

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.4"
# quickcheck_macros = "0.4"

[features]
default = ["http", "emerald-rocksdb"]
http = ["hyper", "reqwest"]
dev = ["clippy"]
fs-storage = []
